Added failure_reason to correctness table

--- a/Ansible/collector_building.yml
+++ b/Ansible/collector_building.yml
@@ -188,4 +188,5 @@
       - internet text
       - transport text
       - is_correct boolean
+      - failure_reason text
       - source_pickle bytea
