--- a/Ansible/collector_building.yml
+++ b/Ansible/collector_building.yml
@@ -125,16 +125,6 @@
     copy:
       src: ../vp_list.txt
       dest: /home/metrics/vp_list.txt
-  - name: Give the crontab entry for get_root_zone.py
-    cron:   # [mba] [wca]
-      name: Get the new root zone
-      minute: "3,33"
-      job: "/home/metrics/repo/get_root_zone.py >>/home/metrics/Logs/cron-alert.txt 2>&1"
-  - name: Give the crontab entry for pull_from_vps.py
-    cron:
-      name: Pull data from the VPs
-      minute: "4,34"
-      job: "/home/metrics/repo/pull_from_vps.py >>/home/metrics/Logs/cron-alert.txt 2>&1"
 - name: Do Postgres stuff
   hosts: c00.mtric.net  
   remote_user: "{{ superuser }}"
@@ -203,3 +193,15 @@
       - is_correct boolean
       - failure_reason text
       - source_pickle bytea
+
+
+#  - name: Give the crontab entry for get_root_zone.py
+#    cron:   # [mba] [wca]
+#      name: Get the new root zone
+#      minute: "3,33"
+#      job: "/home/metrics/repo/get_root_zone.py >>/home/metrics/Logs/cron-alert.txt 2>&1"
+#  - name: Give the crontab entry for pull_from_vps.py
+#    cron:
+#      name: Pull data from the VPs
+#      minute: "4,34"
+#      job: "/home/metrics/repo/pull_from_vps.py >>/home/metrics/Logs/cron-alert.txt 2>&1"
