--- a/Ansible/collector_building.yml
+++ b/Ansible/collector_building.yml
@@ -148,6 +148,16 @@
     copy:
       src: ../root-ds.txt
       dest: /home/metrics/Target/root-ds.txt
+  - name: Give the crontab entry for get_root_zone.py
+    cron:   # [mba] [wca]
+      name: Get the new root zone
+      minute: "0,15,30,45"
+      job: "/home/metrics/repo/get_root_zone.py >>/home/metrics/Logs/cron-alert.txt 2>&1"
+  - name: Give the crontab entry for collector_processing.py
+    cron:
+      name: Do all the processing
+      minute: "4,34"
+      job: "/home/metrics/repo/collector_processing.py >>/home/metrics/Logs/cron-alert.txt 2>&1"
 - name: Do Postgres stuff
   hosts: c00.mtric.net  
   remote_user: "{{ superuser }}"
@@ -221,13 +231,3 @@
 # To nuke just the records: delete from correctness_info; delete from files_gotten; delete from route_info; delete from soa_info;
 # select (id, file_prefix, date_derived, vp, rsi, internet, transport, recent_soa, is_correct, failure_reason) from correctness_info;
 
-#  - name: Give the crontab entry for get_root_zone.py
-#    cron:   # [mba] [wca]
-#      name: Get the new root zone
-#      minute: "3,33"
-#      job: "/home/metrics/repo/get_root_zone.py >>/home/metrics/Logs/cron-alert.txt 2>&1"
-#  - name: Give the crontab entry for pull_from_vps.py
-#    cron:
-#      name: Pull data from the VPs
-#      minute: "4,34"
-#      job: "/home/metrics/repo/pull_from_vps.py >>/home/metrics/Logs/cron-alert.txt 2>&1"
